--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                 </li>
                 <li></li>
                 <li>
-                  <a href="page2.html">Contactez-nous</a>
+                  <a href="contact.html">Contactez-nous</a>
                 </li>
               </ul>
             </div>
