--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </li>
                 <li></li>
                 <li>
-                  <a href="page2.html">Contactez-nous</a>
+                  <a href="contact.html">Contactez-nous</a>
                 </li>
               </ul>
             </div>
@@ -106,7 +106,7 @@
               </h1>
               <div class="text-center">
                 <a
-                  href="page2.html"
+                  href="contact.html"
                   class="
                     btn btn-lg btn-clean btn-rd
                     cta-hero
@@ -234,7 +234,7 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><a class="ltc-white bold-link" href="page2.html"
+                <br /><br /><a class="ltc-white bold-link" href="contact.html"
                   >Contactez notre équipe</a
                 ><br />
               </p>
