Ajout balises meta partage Facebook dans le code html.

--- a/contact.html
+++ b/contact.html
@@ -5,26 +5,41 @@
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
-      content="Contactez notre chouette agence de web designers professionnels, partagez votre projet web pour une meilleure stratégie digitale et des visuels adaptés à votre site et son référencement."
+      content="Contactez notre chouette agence de web designers professionnels, partagez votre projet web pour une meilleure stratégie digitale, des visuels adaptés à votre site et son référencement."
     />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
 
+    <!--Balises partage Facebook-->
+    <meta
+      property="og:title"
+      content="La chouette agence, entreprise webdesign Lyon"
+    />
+    <meta
+      property="og:url"
+      content="https://olivertwist1234.github.io/La-chouette-agence-P4Ocrs.github.io/"
+    />
+    <meta property="og:image" content="img/1.jpg" />
+    <meta
+      property="og:description"
+      content="Contactez notre chouette agence de web designers professionnels, partagez votre projet web pour une meilleure stratégie digitale, des visuels adaptés à votre site et son référencement."
+    />
+
+    <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
+
+    <title>Contactez la chouette agence</title>
 
     <script src="./js/jquery-2.1.0.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/blocs.js"></script>
     <script src="./js/jqBootstrapValidation.js"></script>
     <script src="./js/formHandler.js"></script>
-    <title>Contactez la chouette agence</title>
-
     <!-- Analytics -->
 
     <!-- Analytics END -->
