--- a/index.html
+++ b/index.html
@@ -11,11 +11,28 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
+
+    <!--Balises partage Facebook-->
+    <meta
+      property="og:title"
+      content="La chouette agence, entreprise webdesign Lyon"
+    />
+    <meta
+      property="og:url"
+      content="https://olivertwist1234.github.io/La-chouette-agence-P4Ocrs.github.io/"
+    />
+    <meta property="og:image" content="img/1.jpg" />
+    <meta
+      property="og:description"
+      content="La chouette agence, entreprise de web design à Lyon, création de sites internet sur mesure, modernes et sécurisés. Optimisez votre visibilité avec un site attractif, performant, et responsive."
+    />
+
     <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
+
     <title>La chouette agence, entreprise webdesign Lyon</title>
 
     <script src="./js/jquery-2.1.0.js"></script>
