Redimension, et compression des images.

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,8 @@
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
-      content="Contactez notre chouette agence de web designers professionnels, partagez votre projet web pour une meilleure stratégie digitale, des visuels adaptés à votre site et son référencement."
+      content="Contactez notre chouette agence de web designers professionnels, partagez votre projet 
+      web pour une meilleure stratégie digitale, des visuels adaptés à votre site et son référencement."
     />
     <meta
       name="viewport"
@@ -24,7 +25,8 @@
     <meta property="og:image" content="img/1.jpg" />
     <meta
       property="og:description"
-      content="Contactez notre chouette agence de web designers professionnels, partagez votre projet web pour une meilleure stratégie digitale, des visuels adaptés à votre site et son référencement."
+      content="Contactez notre chouette agence de web designers professionnels, partagez votre projet web 
+      pour une meilleure stratégie digitale, des visuels adaptés à votre site et son référencement."
     />
 
     <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
