--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
-      content="La chouette agence, entreprise de web design à Lyon, création de sites internet sur mesure, modernes et sécurisés. Optimisez votre visibilité avec un site attractif, performant, et responsive."
+      content="La chouette agence, entreprise de web design à Lyon, création de sites internet sur mesure, 
+      modernes et sécurisés. Optimisez votre visibilité avec un site attractif, performant, et responsive."
     />
     <meta
       name="viewport"
