Placement des bibliothèques Javascript en fin de body html et optimisation des attributs alt des images.

--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,6 @@
 
     <title>Contactez la chouette agence</title>
 
-    <script src="./js/jquery-2.1.0.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/blocs.js"></script>
-    <script src="./js/jqBootstrapValidation.js"></script>
-    <script src="./js/formHandler.js"></script>
     <!-- Analytics -->
 
     <!-- Analytics END -->
@@ -57,7 +52,8 @@
               <a class="navbar-brand" href="index.html"
                 ><img
                   src="img/la-chouette-agence.png"
-                  alt="atlanta web design logo"
+                  alt="Logo de la chouette agence, entreprise de webdesign à Lyon"
+                  width="214"
                   height="40"
               /></a>
               <button
@@ -236,5 +232,10 @@
       <!-- Footer - bloc-8 END -->
     </div>
     <!-- Principal conteneur END -->
+    <script src="./js/jquery-2.1.0.js"></script>
+    <script src="./js/bootstrap.js"></script>
+    <script src="./js/blocs.js"></script>
+    <script src="./js/jqBootstrapValidation.js"></script>
+    <script src="./js/formHandler.js"></script>
   </body>
 </html>
