--- a/index.html
+++ b/index.html
@@ -36,12 +36,6 @@
 
     <title>La chouette agence, entreprise webdesign Lyon</title>
 
-    <script src="./js/jquery-2.1.0.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/blocs.js"></script>
-    <script src="./js/jquery.touchSwipe.js" defer></script>
-    <script src="./js/gmaps.js"></script>
-
     <!-- Analytics -->
 
     <!-- Analytics END -->
@@ -57,7 +51,8 @@
               <a class="navbar-brand" href="index.html"
                 ><img
                   src="img/la-chouette-agence.png"
-                  alt="paris web design logo agence web meilleure agence"
+                  alt="logo de l'entreprise de webdesign la chouette agence à Lyon"
+                  width="214"
                   height="40"
               /></a>
               <button
@@ -109,7 +104,8 @@
                   src="img/logo.png"
                   class="center-block image-resize-mode"
                   width="100"
-                  alt="La chouette agence, agence web paris, création logo paris"
+                  height="100"
+                  alt="Logo de l'entreprise lyonnaise de webdesign, la chouette agence"
                 />
                 <h1 class="text-center hero-bloc-text tc-white">
                   La chouette agence.
@@ -280,8 +276,10 @@
                   data-frame="snapshot-lb"
                   ><img
                     src="img/1.jpg"
-                    alt="paris web design logo agence web meilleure agence et refonte site web journal"
+                    alt="Empilement de magazines ouverts et colorés"
                     class="img-responsive portfolio-thumb"
+                    width="270"
+                    height="270"
                 /></a>
                 <h3 class="mg-md text-center">
                   Refonte d'un site web pour un journal local
@@ -301,7 +299,9 @@
                   ><img
                     src="img/2.jpg"
                     class="img-responsive portfolio-thumb"
-                    alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"
+                    alt="Une photographe avec son appareil photo dans la rue"
+                    width="270"
+                    height="270"
                 /></a>
                 <h3 class="mg-md text-center">
                   Création d'un site web pour photographes
@@ -323,7 +323,9 @@
                   ><img
                     src="img/3.jpg"
                     class="img-responsive portfolio-thumb"
-                    alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
+                    alt="Matériel de photographie"
+                    width="270"
+                    height="270"
                 /></a>
                 <h3 class="mg-md text-center">
                   Création d'un site internet pour un voyageur
@@ -343,7 +345,9 @@
                   ><img
                     src="img/4.jpg"
                     class="img-responsive portfolio-thumb"
-                    alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
+                    alt="Ordinateur portable posé sur une table avec les mains de quelqu'un qui saisie au clavier"
+                    width="270"
+                    height="270"
                 /></a>
                 <h3 class="mg-md text-center">
                   Conception d'un site pour une agence de mariage
@@ -437,5 +441,10 @@
       <!-- Footer - bloc-8 END -->
     </div>
     <!-- Principal conteneur END -->
+    <script src="./js/jquery-2.1.0.js"></script>
+    <script src="./js/bootstrap.js"></script>
+    <script src="./js/blocs.js"></script>
+    <script src="./js/jquery.touchSwipe.js" defer></script>
+    <script src="./js/gmaps.js"></script>
   </body>
 </html>
