--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
                 <li>
                   <a href="index.html">Accueil</a>
                 </li>
-                <li></li>
                 <li>
                   <a href="contact.html">Contactez-nous</a>
                 </li>
@@ -133,10 +132,7 @@
           <div class="container bloc-md">
             <div class="row">
               <div class="col-sm-12 text-center">
-                <img
-                  alt="agence web, agence web paris, web design paris, stratégie web"
-                  src="img/title.png"
-                />
+                <h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
               </div>
             </div>
             <div class="row voffset-lg med-width-whitespace">
@@ -201,10 +197,9 @@
             </div>
             <article class="row voffset-lg voffset">
               <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                <img
-                  alt="agence web, agence web paris, web design paris, stratégie web"
-                  src="img/citation.png"
-                />
+                <h2>"La chouette agence est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre 
+                  entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h2>
+                <p>Maxime Guibard, PDG de À vos fourchettes</p>
               </div>
             </article>
           </div>
@@ -260,10 +255,7 @@
           <div class="container bloc-lg">
             <div class="row">
               <div class="col-sm-12 text-center">
-                <img
-                  alt="agence web, agence web paris, web design paris, stratégie web"
-                  src="img/title2.png"
-                />
+                <h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
               </div>
             </div>
             <div class="row tight-width-whitespace portfolio-row">
@@ -278,8 +270,6 @@
                     src="img/1.jpg"
                     alt="Empilement de magazines ouverts et colorés"
                     class="img-responsive portfolio-thumb"
-                    width="270"
-                    height="270"
                 /></a>
                 <h3 class="mg-md text-center">
                   Refonte d'un site web pour un journal local
@@ -300,8 +290,6 @@
                     src="img/2.jpg"
                     class="img-responsive portfolio-thumb"
                     alt="Une photographe avec son appareil photo dans la rue"
-                    width="270"
-                    height="270"
                 /></a>
                 <h3 class="mg-md text-center">
                   Création d'un site web pour photographes
@@ -324,8 +312,6 @@
                     src="img/3.jpg"
                     class="img-responsive portfolio-thumb"
                     alt="Matériel de photographie"
-                    width="270"
-                    height="270"
                 /></a>
                 <h3 class="mg-md text-center">
                   Création d'un site internet pour un voyageur
@@ -346,8 +332,6 @@
                     src="img/4.jpg"
                     class="img-responsive portfolio-thumb"
                     alt="Ordinateur portable posé sur une table avec les mains de quelqu'un qui saisie au clavier"
-                    width="270"
-                    height="270"
                 /></a>
                 <h3 class="mg-md text-center">
                   Conception d'un site pour une agence de mariage
