--- a/contact.html
+++ b/contact.html
@@ -121,29 +121,31 @@
                 <h2>Remplissez notre formulaire de contact.</h2>
                 <form id="form_1">
                   <fieldset class="form-group">
-                    <label> Nom </label>
-                    <input id="name" class="form-control" required />
+                    <label for="name"> Nom </label>
+                    <input id="name" class="form-control" required aria-label="Nom"/>
                   </fieldset>
                   <fieldset class="form-group">
-                    <label> Adresse email </label>
+                    <label for="email"> Adresse email </label>
                     <input
                       id="email"
                       class="form-control"
                       type="email"
                       required
+                      aria-label="Adresse email"
                     />
                   </fieldset>
                   <fieldset class="form-group">
-                    <label> Comment nous avez-vous connu ? </label>
+                    <label for="input_504"> Comment nous avez-vous connu ? </label>
                     <input
                       class="form-control"
                       type="email"
                       required
                       id="input_504"
+                      aria-label="Comment nous avez-vous connu ?"
                     />
                   </fieldset>
                   <fieldset class="form-group">
-                    <label>
+                    <label for="message">
                       Brief de votre projet (Ajoutez autant de détails que
                       nécessaire)<br /> </label
                     ><textarea
@@ -152,6 +154,7 @@
                       rows="4"
                       cols="50"
                       required
+                      aria-label="Brief de votre projet (Ajoutez autant de détails que nécessaire)"
                     ></textarea>
                   </fieldset>
                   <button
