ajustement contraste et formulaire.

--- a/contact.html
+++ b/contact.html
@@ -120,11 +120,11 @@
               <div class="col-sm-6">
                 <h2>Remplissez notre formulaire de contact.</h2>
                 <form id="form_1">
-                  <fieldset class="form-group">
+                  <div class="form-group">
                     <label for="name"> Nom </label>
                     <input id="name" class="form-control" required aria-label="Nom"/>
-                  </fieldset>
-                  <fieldset class="form-group">
+                  </div>
+                  <div class="form-group">
                     <label for="email"> Adresse email </label>
                     <input
                       id="email"
@@ -133,8 +133,8 @@
                       required
                       aria-label="Adresse email"
                     />
-                  </fieldset>
-                  <fieldset class="form-group">
+                  </div>
+                  <div class="form-group">
                     <label for="input_504"> Comment nous avez-vous connu ? </label>
                     <input
                       class="form-control"
@@ -143,8 +143,8 @@
                       id="input_504"
                       aria-label="Comment nous avez-vous connu ?"
                     />
-                  </fieldset>
-                  <fieldset class="form-group">
+                  </div>
+                  <div class="form-group">
                     <label for="message">
                       Brief de votre projet (Ajoutez autant de détails que
                       nécessaire)<br /> </label
@@ -156,7 +156,7 @@
                       required
                       aria-label="Brief de votre projet (Ajoutez autant de détails que nécessaire)"
                     ></textarea>
-                  </fieldset>
+                    </div>
                   <button
                     class="
                       bloc-button
