Ajout aria-label sur liens réseaux sociaux.

--- a/contact.html
+++ b/contact.html
@@ -200,28 +200,28 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://twitter.com"
+                    <a class="social" href="https://twitter.com" aria-label="lien vers notre page Twitter"
                       ><span class="fa fa-twitter icon-md"></span
                     ></a>
                   </figure>
                 </div>
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://facebook.com"
+                    <a class="social" href="https://facebook.com" aria-label="lien vers notre page facebook"
                       ><span class="fa fa-facebook icon-md"></span
                     ></a>
                   </figure>
                 </div>
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://dribble.com"
+                    <a class="social" href="https://dribble.com" aria-label="lien vers notre page Dribble"
                       ><span class="fa fa-dribbble icon-md"></span
                     ></a>
                   </figure>
                 </div>
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://instagram.com"
+                    <a class="social" href="https://instagram.com" aria-label="lien vers notre page Instagram"
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </figure>
