--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
           <div class="container bloc-md">
             <div class="row">
               <div class="col-sm-12 text-center">
-                <h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
+                <h2>
+                  La chouette agence est une agence de web design qui aide les
+                  entreprises à devenir attractives et visibles sur Internet.
+                </h2>
               </div>
             </div>
             <div class="row voffset-lg med-width-whitespace">
@@ -197,8 +200,12 @@
             </div>
             <article class="row voffset-lg voffset">
               <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                <h2>"La chouette agence est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre 
-                  entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h2>
+                <h2>
+                  "La chouette agence est une excellente agence web! Les web
+                  designers ont réussi à capturer l'essence de notre entreprise
+                  et à l'intégrer à notre site. Cela nous a aidé à doubler nos
+                  ventes en ligne à Lyon."
+                </h2>
                 <p>Maxime Guibard, PDG de À vos fourchettes</p>
               </div>
             </article>
@@ -255,7 +262,10 @@
           <div class="container bloc-lg">
             <div class="row">
               <div class="col-sm-12 text-center">
-                <h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
+                <h2>
+                  Nous travaillons avec beaucoup de clients, voici nos
+                  réalisations.
+                </h2>
               </div>
             </div>
             <div class="row tight-width-whitespace portfolio-row">
@@ -391,28 +401,40 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://twitter.com"
+                    <a
+                      class="social"
+                      href="https://twitter.com"
+                      aria-label="lien vers notre page twitter"
                       ><span class="fa fa-twitter icon-md"></span
                     ></a>
                   </figure>
                 </div>
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://facebook.com"
+                    <a
+                      class="social"
+                      href="https://facebook.com"
+                      aria-label="lien vers notre page facebook"
                       ><span class="fa fa-facebook icon-md"></span
                     ></a>
                   </figure>
                 </div>
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://dribble.com"
+                    <a
+                      class="social"
+                      href="https://dribble.com"
+                      aria-label="lien vers notre page dribble"
                       ><span class="fa fa-dribbble icon-md"></span
                     ></a>
                   </figure>
                 </div>
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://instagram.com"
+                    <a
+                      class="social"
+                      href="https://instagram.com"
+                      aria-label="lien vers notre page instagram"
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </figure>
