Minification fichiers css et Javascript.

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <!-- bloc-2-services END -->
 
         <!-- bloc-3-what-i-do -->
-        <section
+        <div
           class="
             bloc
             tc-white
@@ -251,7 +251,7 @@
               </article>
             </div>
           </div>
-        </section>
+        </div>
         <!-- bloc-3-what-i-do END -->
 
         <!-- bloc-4-portfolio -->
@@ -377,7 +377,7 @@
               </h2>
               <div class="col-sm-12 text-center">
                 <a
-                  href="page2.html"
+                  href="contact.html"
                   class="
                     btn btn-atomic-tangerine btn-clean btn-rd btn-lg
                     cta-hero
