Padding sur liens de réseaux sociaux et taile des images dans le html.

--- a/index.html
+++ b/index.html
@@ -280,6 +280,8 @@
                     src="img/1.jpg"
                     alt="Empilement de magazines ouverts et colorés"
                     class="img-responsive portfolio-thumb"
+                    width="570"
+                    height="570"
                 /></a>
                 <h3 class="mg-md text-center">
                   Refonte d'un site web pour un journal local
@@ -300,6 +302,8 @@
                     src="img/2.jpg"
                     class="img-responsive portfolio-thumb"
                     alt="Une photographe avec son appareil photo dans la rue"
+                    width="570"
+                    height="570"
                 /></a>
                 <h3 class="mg-md text-center">
                   Création d'un site web pour photographes
@@ -322,6 +326,8 @@
                     src="img/3.jpg"
                     class="img-responsive portfolio-thumb"
                     alt="Matériel de photographie"
+                    width="570"
+                    height="570"
                 /></a>
                 <h3 class="mg-md text-center">
                   Création d'un site internet pour un voyageur
@@ -342,6 +348,8 @@
                     src="img/4.jpg"
                     class="img-responsive portfolio-thumb"
                     alt="Ordinateur portable posé sur une table avec les mains de quelqu'un qui saisie au clavier"
+                    width="570"
+                    height="570"
                 /></a>
                 <h3 class="mg-md text-center">
                   Conception d'un site pour une agence de mariage
