Ajout target blank dans les liens de réseaux sociaux et lien mailto sur adresse contact.html.

--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
               </div>
               <div class="col-sm-6">
                 <p>
-                  contact@lachouetteagence.com<br />2 place Sathonay 69001
+                  <adress><a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a></adress><br />2 place Sathonay 69001
                   Lyon<br />Ouvert de 9h à 18h, du lundi au vendredi<br />
                 </p>
               </div>
@@ -200,28 +200,28 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://twitter.com" aria-label="lien vers notre page Twitter"
+                    <a class="social" href="https://twitter.com" aria-label="lien vers notre page Twitter" target="_blank"
                       ><span class="fa fa-twitter icon-md"></span
                     ></a>
                   </figure>
                 </div>
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://facebook.com" aria-label="lien vers notre page facebook"
+                    <a class="social" href="https://facebook.com" aria-label="lien vers notre page facebook" target="_blank"
                       ><span class="fa fa-facebook icon-md"></span
                     ></a>
                   </figure>
                 </div>
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://dribble.com" aria-label="lien vers notre page Dribble"
+                    <a class="social" href="https://dribble.com" aria-label="lien vers notre page Dribble" target="_blank"
                       ><span class="fa fa-dribbble icon-md"></span
                     ></a>
                   </figure>
                 </div>
                 <div class="col-sm-3">
                   <figure class="text-center">
-                    <a class="social" href="https://instagram.com" aria-label="lien vers notre page Instagram"
+                    <a class="social" href="https://instagram.com" aria-label="lien vers notre page Instagram" target="_blank"
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </figure>
