--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
                       class="social"
                       href="https://twitter.com"
                       aria-label="lien vers notre page twitter"
+                      target="_blank"
                       ><span class="fa fa-twitter icon-md"></span
                     ></a>
                   </figure>
@@ -423,6 +424,7 @@
                       class="social"
                       href="https://facebook.com"
                       aria-label="lien vers notre page facebook"
+                      target="_blank"
                       ><span class="fa fa-facebook icon-md"></span
                     ></a>
                   </figure>
@@ -433,6 +435,7 @@
                       class="social"
                       href="https://dribble.com"
                       aria-label="lien vers notre page dribble"
+                      target="_blank"
                       ><span class="fa fa-dribbble icon-md"></span
                     ></a>
                   </figure>
@@ -443,6 +446,7 @@
                       class="social"
                       href="https://instagram.com"
                       aria-label="lien vers notre page instagram"
+                      target="_blank"
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </figure>
